# qd-backend

./: .dockerignore  Dockerfile  Readme.md  admin_interface.py  build.bat  config.py  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt  test.py  testing_latency.py
default/: hr_routing_prompt.json
ingestion_retrieval/: __init__.py  hr_routing_prompt.json  ingestion.py  retrieval.py
uploaded_folders/Data/Data/: 14. Car & Fuel Policy.docx  3. Attendance Policy 3.0.docx  9. QG Code of Conduct.docx
